--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+
+{ "homepage":".",
   "name": "tanika-tech",
   "version": "0.1.0",
   "private": true,
@@ -39,4 +40,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
